# cretinsbar

./: .cproject  .project  CMakeLists.txt  README.md
cmake/: FindSoundTouch.cmake  Findmpg123.cmake
src/: CretinsBar.cpp  CretinsBar.h  Engine.cpp  Engine.h  main.cpp
src/GUI/: MainWindow.cpp  MainWindow.h  MainWindow.ui  WaveForm.cpp  WaveForm.h  Waveform.cpp  Waveform.h
src/SoundUtils/: SoundUtils.cpp  SoundUtils.h  WavFile.cpp  WavFile.h  Wave.cpp  Wave.h
src/Utilities/: WavAnalyser.cpp  WavAnalyser.h
